# abelkhan

./: .gitignore  .gitmodules  README.md  build_proto_cpp.bat  build_proto_csharp.bat  build_proto_ts.bat
common/compress_and_encrypt/: compress_and_encrypt.cs
common/config/: config.cs
common/juggle_protcol/: center.juggle  client.juggle  dbproxy.juggle  gate.juggle  hub.juggle  logic.juggle  routing.juggle
common/log/: log.cs
common/module/: module.cs  modulemanager.cs
common/protcol/: center.juggle  client.juggle  dbproxy.juggle  gate.juggle  hub.juggle
common/service/: acceptnetworkservice.cs  channel.cs  juggleservice.cs  (+5 more)
component/: component.sln
cpp_component/: CMakeLists.txt
cpp_component/component/dbproxy/: CMakeLists.txt  center_msg_handle.h  centerproxy.cpp  centerproxy.h  closehandle.h  dbproxy_server.cpp  dbproxy_server.h  hub_msg_handle.h  hubmanager.cpp  hubmanager.h  hubproxy.cpp  hubproxy.h  mongodbproxy.cpp  mongodbproxy.h
cpp_component/component/gate/: CMakeLists.txt  center_msg_handle.h  centerproxy.h  client_msg_handle.h  clientmanager.cpp  clientmanager.h  closehandle.h  gate.cpp  gate_server.cpp  gate_server.h  gc_buffer.cpp  gc_buffer.h  hub_svr_msg_handle.h  hubsvrmanager.h  modulemng_handle.cpp  modulemng_handle.h  timer_handle.h
cpp_component/component/hub/: CMakeLists.txt  center_msg_handle.h  centerproxy.h  closehandle.h  dbproxy_msg_handle.h  dbproxyproxy.cpp  dbproxyproxy.h  direct_client_msg_handle.h  gate_msg_handle.h  gatemanager.cpp  gatemanager.h  hub.h  hub_service.cpp  hub_service.h  hub_svr_msg_handle.h  hubsvrmanager.cpp  hubsvrmanager.h  timer_handle.h
cpp_component/component/websocketgate/: CMakeLists.txt  centerproxy.h  client_msg_handle.h  clientmanager.h  closehandle.cpp  closehandle.h  gate.cpp  hub_svr_msg_handle.h  hubsvrmanager.cpp
cpp_component/config/: config.h
cpp_component/log/: log.h
cpp_component/module/: module .cpp  module.h  modulemanager.h
cpp_component/service/: DNS.h  acceptservice.h  buffer.cpp  buffer.h  channel.h  channel_encrypt_decrypt_ondata.h  connectservice.h  enetacceptservice.h  enetchannel.h  enetconnectservice.h  gc_poll.cpp  gc_poll.h  juggleservice.h  modulemng_handle.cpp  modulemng_handle.h  objpool.h  redismqchannel.cpp  redismqchannel.h  redismqservice.h  timerservice.h  websocketacceptservice.h  websocketchannel.cpp  websocketchannel.h
cpp_component/time/: msec_time.cpp  msec_time.h
csharp_component/: .editorconfig  abelkhan.sln
ext/c++/common/component/hub/: CMakeLists.txt  center_msg_handle.h  centerproxy.cpp  centerproxy.h  closehandle.cpp  closehandle.h  dbproxy_msg_handle.h  dbproxyproxy.cpp  dbproxyproxy.h  gate_msg_handle.h  gatemanager.cpp  gatemanager.h  gateproxy.cpp  gateproxy.h  hub.cpp  logic_svr_msg_handle.h  logicmanager.cpp  logicmanager.h  logicproxy.cpp  logicproxy.h
fossilizid/: CMakeLists.txt
hub_build/: Exception.cs  Icaller.cs  Imodule.cs  JsonParser.cs  centerproxy.cs  dbproxy_call_hubmodule.cs  dbproxyproxy.cs  gatemanager.cs  hub.cs  hub_call_dbproxycaller.cs  hub_call_hubcaller.cs  hub_msg_handle.cs  hubmanager.cs  log.cs  process.cs  service.cs  timerservice.cs
jsonparse/: JsonParser.cs
juggle/: LICENSE  gencpp.py  gencsharp.py
lock_free/: CMakeLists.txt  README.md
lock_free/container/: CMakeLists.txt  optimisticque.h  ringque.h
lock_free/pool/: CMakeLists.txt  mempool.cpp  mempool.h  objpool.h
lock_free/test/: test_ringque.cpp
protcol/: build_proto_csharp.bat  build_proto_ts.bat  center.juggle  client.juggle  dbproxy.juggle  gate.juggle  hub.juggle
protocol/: build_proto_cpp.bat  build_proto_csharp.bat  build_proto_python.bat  build_proto_ts.bat
py_hub/: abelkhan.py  center.py  center_msg_handle.py  centerproxy.py  framework_error.py  hub.py  hub_msg_handle.py  hub_server.py  hubmanager.py  hubproxy.py  module.py  modulemanager.py  redis_mq.py
rpc/: build_test.bat  genc2h.py  genc2hcaller.py  genc2hmodule.py  genh2c.py  genh2ccaller.py  genh2cmodule.py  genh2h.py  genh2hcaller.py  genh2hmodule.py
sample/: config.txt  start_svr.bat
sample/cpp/: CMakeLists.txt  test.cpp
sample/gate/: CMakeLists.txt  gate.cpp
servers/: CMakeLists.txt
servers/center/: CMakeLists.txt  center.cpp  gm_msg_handle.h  gmmanager.cpp  gmmanager.h  logic_svr_msg_handle.h  logicsvrmanager.h  svr_msg_handle.h  svrmanager.cpp  svrmanager.h
servers/client/: client.sln  client.userprefs
servers/client/client/: client.cs
servers/dbproxy/: CMakeLists.txt  center_msg_handle.h  centerproxy.cpp  centerproxy.h  closehandle.cpp  closehandle.h  dbproxy.cpp  hub_svr_msg_handle.h  hubsvrmanager.h  logic_svr_msg_handle.h  logicsvrmanager.cpp  logicsvrmanager.h  mongodb_proxy.h
servers/gate/: CMakeLists.txt  center_msg_handle.h  centerproxy.cpp  centerproxy.h  client_msg_handle.h  clientmanager.cpp  clientmanager.h  gate.cpp  heartbeat_handle.h  logic_svr_msg_handle.h  logicsvrmanager.cpp  logicsvrmanager.h
servers/hub/: CMakeLists.txt  hub.sln  hub.userprefs
servers/hub/hub/: center_msg_handle.cs  centerproxy.cs  closehandle.cs  dbproxy_msg_handle.cs  dbproxyproxy.cs  hub.cs  hub.csproj  logic_msg_handle.cs  logicmanager.cs  logicproxy.cs  logicsvrmanager.cs
servers/logic/: logic.sln  logic.userprefs
servers/logic/logic/: center_msg_handle.cs  centerproxy.cs  closehandle.cs  dbproxy_msg_handle.cs  dbproxyproxy.cs  gate_msg_handle.cs  gatemanager.cs  gateproxy.cs  hub_msg_handle.cs  hubmanager.cs  hubproxy.cs  logic.cs  logic.csproj  logic_msg_handle.cs  logicmanager.cs  logicproxy.cs
servers/routing/: CMakeLists.txt
test/test_cpp_service/: CMakeLists.txt  test_cpp_service_client.cpp  test_cpp_service_server.cpp
test/test_lock-free/: CMakeLists.txt  test.h  test_optimisticque.cpp  test_small_hash_map.cpp
thirdpart/c++/goodform/: CMakeLists.txt  LICENSE.txt  README.md
thirdpart/c++/goodform/include/: form.hpp  json.hpp  msgpack.hpp  variant.hpp
thirdpart/c++/goodform/src/: json.cpp  msgpack.cpp  variant.cpp
thirdpart/c++/goodform/tests/: variant-test.cpp
thirdpart/juggle/c++/: CMakeLists.txt  Icaller.h  Imodule.h  detail.cpp
(+9745 files in other folders)
